Remove cache files. Using stable versions of packages. Fix web crawler work type.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-mysql-python
-sqlalchemy
+mysql-python==1.2.5
+sqlalchemy==1.0.12
 Flask==0.10.1
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.3
-Flask-Script
-Flask-Migrate
-simplejson
-grab==0.6.30
+Flask-Script==2.0.5
+Flask-Migrate==1.8.0
+simplejson==3.8.2
+grab==0.4.13
 pycurl==7.19.5.3
-flask-socketio
-eventlet
+flask-socketio==2.2
+eventlet==0.19.0
+lxml==2.3.3
